# my_cfo

./: .gitignore  Makefile  README.md  agents.md  cfo  finance_config.yaml  main.py  requirements.txt
.claude/: settings.local.json
cfor_rs/: .gitignore  Cargo.toml  Makefile  README.md
cfor_rs/src/: commands.rs  config.rs  db.rs  display.rs  error.rs  lib.rs  llm.rs  main.rs  models.rs
cfor_rs/src/importers/: credit_card_csv.rs  mod.rs
cfor_rs/src/mcp/: server.rs
cfor_rs/src/services/: ask_context.rs  manual_snapshots.rs  mod.rs  now.rs  snapshots.rs  transfers.rs
cfor_rs/src/tui/: app.rs
dev/: demo.html  spec.md  spec_mcp.md
fin_console/: app.py
finance_core/: config.py  db.py  display.py  llm.py
finance_core/importers/: bitflyer_csv.py  credit_card_csv.py
finance_core/services/: ask_context.py  commands.py  manual_snapshots.py  now.py  snapshots.py  transfers.py
finance_mcp/: __init__.py  server.py
migrations/: 001_init.sql
scripts/: mcp_client.py  mcp_list_tools.py
tests/: test_finance_core.py
