[package]
name = "cfor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cfor"
path = "src/main.rs"

[[bin]]
name = "cfor-mcp"
path = "src/bin/mcp.rs"

[[bin]]
name = "cfor-tui"
path = "src/bin/tui.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.2"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
sha2 = "0.10"
hex = "0.4"
encoding_rs = "0.8"
ratatui = "0.29"
crossterm = "0.28"
shlex = "1"
unicode-normalization = "0.1"
csv = "1"

[lib]
name = "cfor"
path = "src/lib.rs"
